--- a/settings.example.json
+++ b/settings.example.json
@@ -11,17 +11,19 @@
   },
   "instance_id": "account-address",
   "rpc": {
-    "full_nodes": [{
-      "url": "https://rpc-url",
-      "rate_limit": "100000000/day;20000/minute;1000/second"
-    }],
+    "full_nodes": [
+      {
+        "url": "https://rpc-url",
+        "rate_limit": "100000000/day;20000/minute;1000/second"
+      }
+    ],
     "archive_nodes": [],
     "force_archive_blocks": 100,
     "retry": 5,
     "request_time_out": 5,
     "skip_epoch_threshold_blocks": 30,
     "polling_interval": 10,
-    "connection_limits":{
+    "connection_limits": {
       "max_connections": 100,
       "max_keepalive_connections": 50,
       "keepalive_expiry": 300
@@ -105,7 +107,7 @@
     },
     "timeout": 60,
     "local_cache_path": "/home/ubuntu/local_cache/",
-    "connection_limits":{
+    "connection_limits": {
       "max_connections": 100,
       "max_keepalive_connections": 50,
       "keepalive_expiry": 300
@@ -118,7 +120,7 @@
       "background_pinning": false
     }
   },
-  "web3storage":{
+  "web3storage": {
     "upload_snapshots": false,
     "upload_aggregates": true,
     "url": "https://api.web3.storage",
@@ -129,13 +131,15 @@
     "idle_conn_timeout": 300
   },
   "anchor_chain_rpc": {
-    "full_nodes": [{
-      "url": "https://prost-rpc-url",
-      "rate_limit": "100000000/day;20000/minute;1000/second"
-    }],
+    "full_nodes": [
+      {
+        "url": "https://prost-rpc-url",
+        "rate_limit": "100000000/day;20000/minute;1000/second"
+      }
+    ],
     "retry": 5,
     "request_time_out": 5,
-    "connection_limits":{
+    "connection_limits": {
       "max_connections": 100,
       "max_keepalive_connections": 50,
       "keepalive_expiry": 300
